# icebox

./: .dockerignore  .gitignore  ADVERSARIAL_FINDINGS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PRODUCT.md  README.md  SECURITY.md  agent.md  book.toml  pyproject.toml
.agents/: AGENTS.md
.github/: RELEASE_PROCESS.md
.github/workflows/: ci.yml  docs.yml  icebox-validation.yml  release.yml
Formula/: icebox.rb
crates/icebox-ai/: Cargo.toml
crates/icebox-ai/examples/: agent_demo.rs
crates/icebox-ai/src/: agent.rs  lib.rs  ollama.rs  orchestrator.rs  validator.rs
crates/icebox-capi/: Cargo.toml
crates/icebox-capi/src/: lib.rs
crates/icebox-cli/: Cargo.toml
crates/icebox-cli/src/: main.rs
crates/icebox-client/: Cargo.toml
crates/icebox-client/src/: lib.rs
crates/icebox-core/: Cargo.toml
crates/icebox-core/examples/: workspace_demo.rs
crates/icebox-core/src/: executor.rs  framework.rs  governance.rs  job.rs  lib.rs  module.rs  safety.rs  sdk.rs  session.rs  workspace.rs
crates/icebox-core/tests/: dogfooding.rs  evidence.rs  governance.rs
crates/icebox-interfaces/: Cargo.toml
crates/icebox-interfaces/src/: lib.rs  rest.rs
crates/icebox-macro/: Cargo.toml
crates/icebox-macro/src/: lib.rs
crates/icebox-modules/: Cargo.toml
crates/icebox-modules/examples/: guarded_run.rs  modules_demo.rs  proto_demo.rs  scan_test.rs
crates/icebox-modules/src/: lib.rs  network_scanners.rs  recon_scanners.rs  vuln_scanner.rs
crates/icebox-modules/tests/: eval.rs
crates/icebox-py/: Cargo.toml
crates/icebox-py/src/: lib.rs
dashboard/src/: App.tsx  index.css
demos/: 01_vuln_scanner.sh  02_multi_agent_campaign.sh  03_policy_blocking.sh  04_continuous_validation.sh  05_approval_workflow.sh  README.md  run_all.sh
docs/: ARCHITECTURE.md  GEE_INVARIANTS.md  README.md  SUMMARY.md  architecture.md  features.md  installation.md  introduction.md  quickstart.md  sdk-python.md  sdk-rust.md  troubleshooting.md  what-is-icebox.md
docs/src/: SUMMARY.md  architecture.md  features.md  installation.md  introduction.md  no-account.md  quickstart.md  sdk-cabi.md  sdk-python.md  sdk-rust.md
examples/: adversarial_cat1_cat2.py  adversarial_cat6_stress.py  agent_demo.rs  agent_exercise.py  autogen.py  claude_code.py  crewai.py  govern_demo.rs  guarded_run.rs  modules_demo.rs  openai_agents.py  proto_demo.rs  scan_test.rs  workspace_demo.rs
examples/custom_module/: Cargo.toml
examples/custom_module/src/: lib.rs
k8s/: deployment.yaml  service.yaml
packs/: bug_bounty.json  production.json
python/: icebox_sdk.py
python/examples/: govern_demo.py  governed_agent.py
python/icebox/: __init__.py  _sdk.py  cli.py  governance.py  presets.py  session.py  tools.py
src/: capi.rs  lib.rs  main.rs
src/ai/: agent.rs  mod.rs  ollama.rs  openai.rs  orchestrator.rs  validator.rs
src/core/: audit.rs  executor.rs  framework.rs  gee.rs  governance.rs  job.rs  mod.rs  module.rs  plugins.rs  proxy.rs  safety.rs  sandbox.rs  sdk.rs  session.rs  workspace.rs
src/core/proxy/: mod.rs  netns.rs  tcp.rs
src/interfaces/: rest.rs
src/modules/: mod.rs  network_scanners.rs  recon_scanners.rs  vuln_scanner.rs
tests/: capi_execute.rs  dogfooding.rs  eval.rs  evidence.rs  governance.rs  governance_plugin.rs  rest_auth.rs  sandbox.rs  sandbox_docker.rs  test_sdk.py  test_session.py
tests/governance_plugin/: eval.rs  governance.rs
xtask/: Cargo.toml
xtask/src/: main.rs
