[workspace]
resolver = "2"
members = [
    "crates/icebox-cli",
    "crates/icebox-core",
    "crates/icebox-modules",
    "crates/icebox-interfaces",
    "crates/icebox-ai",
    "crates/icebox-capi",
    "crates/icebox-macro",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/TBD/ICEBOX"

[workspace.dependencies]
sha1 = "0.10"
md5 = "0.8"
# Async runtime + networking
tokio = { version = "1.52", features = ["full"] }
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Errors / logging
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# Module system
linkme = "0.3"
async-trait = "0.1"
# CLI
reedline = "0.38"
# HTTP / REST API
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
# AI / HTTP client
reqwest = { version = "0.12", features = ["json"] }
# Data encoding
hex = "0.4"
base64 = "0.22"
ipnet = "2"
