[package]
name = "icebox-gov"
version = "0.2.5"
edition = "2021"
authors = ["Tanmay Devare <contact@tanmaydevare.com>"]
license = "MIT"
description = "Runtime governance for autonomous offensive security — the single seam every human operator, REST client, and LLM agent must pass through before anything touches a target."
repository = "https://github.com/Devaretanmay/icebox"
homepage = "https://github.com/Devaretanmay/icebox"
readme = "README.md"
keywords = ["security", "governance", "offensive-security", "agent", "policy"]
categories = ["command-line-utilities", "authentication"]

[lib]
name = "icebox"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "icebox-daemon"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.52", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
linkme = "0.3"
async-trait = "0.1"
ipnet = "2"
sha1 = "0.10"
md5 = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hex = "0.4"
base64 = "0.22"
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
icebox-macro = { path = "crates/icebox-macro", version = "0.2.5" }
bollard = "0.21"
futures-util = "0.3"
hyper = { version = "1.0", features = ["full"] }
hyperlocal = "0.9"
hyper-util = "0.1"
http-body-util = "0.1"

[workspace]
members = ["crates/icebox-macro", "crates/icebox-py", "crates/icebox-client", "xtask", "examples/custom_module"]

[workspace.package]
version = "0.2.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/Devaretanmay/icebox"
