[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "icebox._icebox"
manifest-path = "crates/icebox-py/Cargo.toml"
python-source = "python"

[project]
name = "icebox-sdk"
version = "0.2.6"
description = "Python SDK for ICEBOX — runtime governance for autonomous offensive security."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["security", "governance", "offensive-security", "sdk", "ai", "langchain"]
authors = [{ name = "Tanmay Devare", email = "contact@tanmaydevare.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.optional-dependencies]
langchain = ["langchain>=0.1", "pydantic>=2"]

[project.scripts]
icebox = "icebox.cli:main"

[project.urls]
Homepage = "https://github.com/Devaretanmay/icebox"
Repository = "https://github.com/Devaretanmay/icebox"

[tool.maturin.sdist]
include = ["Cargo.toml", "src/**/*", "crates/**/*", "python/**/*"]
