[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "icebox._icebox"
manifest-path = "crates/icebox-py/Cargo.toml"
python-source = "python"

[project]
name = "icebox-sdk"
version = "2.0.0b0"
description = "A staging environment for autonomous workflows. Give your AI agent a safe place to fail; reality only sees the first success."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["security", "governance", "offensive-security", "agent", "sdk"]
authors = [{ name = "Tanmay Devare", email = "contact@tanmaydevare.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
icebox = "icebox.cli:main"

[project.urls]
Homepage = "https://github.com/Devaretanmay/icebox"
Repository = "https://github.com/Devaretanmay/icebox"

[tool.maturin.sdist]
include = ["Cargo.toml", "src/**/*", "crates/**/*", "python/**/*"]
