[package]
name = "icebox-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
icebox-core = { path = "../icebox-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
reqwest.workspace = true
icebox-modules = { path = "../icebox-modules" }
async-trait.workspace = true
