[package]
name = "icebox-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
icebox-core = { path = "../icebox-core" }
icebox-modules = { path = "../icebox-modules" }
icebox-ai = { path = "../icebox-ai" }
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
icebox-interfaces = { path = "../icebox-interfaces" }