[package]
name = "icebox-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP client for the ICEBOX governance daemon."
repository.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"

[lib]
name = "icebox_client"
