[package]
name = "icebox-interfaces"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
icebox-core = { path = "../icebox-core" }
icebox-modules = { path = "../icebox-modules" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
axum.workspace = true
tower-http.workspace = true
icebox-ai = { path = "../icebox-ai" }
