[package]
name = "icebox-modules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
icebox-core = { path = "../icebox-core" }
icebox-macro = { path = "../icebox-macro" }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
async-trait.workspace = true
linkme = "0.3"
# Runtime for async modules (TCP scanner, etc.)
tokio = { workspace = true, features = ["net", "time", "process"] }
sha1.workspace = true
md5.workspace = true
reqwest.workspace = true
hex.workspace = true
base64.workspace = true

[dev-dependencies]
tokio.workspace = true
serde_json.workspace = true
