[package]
name = "icebox-py"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "_icebox"
crate-type = ["cdylib"]

[dependencies]
icebox = { path = "../../", package = "icebox-gov" }
pyo3 = { version = "0.21", features = ["extension-module", "anyhow"] }
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
regex = "1"
