[package]
name = "icebox-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings (pyo3) for the ICEBOX governance runtime."
repository.workspace = true

[lib]
name = "_icebox"
crate-type = ["cdylib"]

[dependencies]
icebox = { path = "../../", package = "icebox-gov", version = "2.0.0-beta" }
pyo3 = { version = "0.25", features = ["extension-module", "anyhow"] }
tokio = { version = "1.34", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
regex = "1"
