[package]
name = "custom_module"
version = "0.1.0"
edition = "2021"

[dependencies]
icebox = { path = "../../", package = "icebox-gov" }
icebox-macro = { path = "../../crates/icebox-macro" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
linkme = "0.3"
